:recycle: refactor: Organização/renomeação de métodos e variáveis